Домашняя работа Урок 13. Семинар. Работа с медиа

--- a/index.html
+++ b/index.html
@@ -117,103 +117,7 @@
         </p>
       </div>
 
-      <div class="bottom center">
- <!--        <div class="bottom_item">
-          <div class="bottom_img_cart">
-            <img src="img/1.jpg" alt="" class="bottom_img">
-            <div class="bottom_basket">
-              <img src="img/StrokeEffect.svg" alt="" class="bottom_basket_img">
-              <p class="bottom_basket_text"><a href="Cart.html">Add to Cart</a></p>
-            </div>
-          </div>
-          <h2 class="bottom_h2">ELLERY X M'O CAPSULE</h2>
-          <h3 class="bottom_h3">
-            Known for her sculptural takes on traditional tailoring,
-            Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-          </h3>
-          <h2 class="bottom_h2_price">$52.00</h2>
-        </div>
-        <div class="bottom_item">
-          <div class="bottom_img_cart">
-            <img src="img/2.png" alt="" class="bottom_img">
-            <div class="bottom_basket">
-              <img src="img/StrokeEffect.svg" alt="" class="bottom_basket_img">
-              <p class="bottom_basket_text"><a href="Cart.html">Add to Cart</a></p>
-            </div>
-          </div>
-
-          <h2 class="bottom_h2">ELLERY X M'O CAPSULE</h2>
-          <h3 class="bottom_h3">
-            Known for her sculptural takes on traditional tailoring,
-            Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-          </h3>
-          <h2 class="bottom_h2_price">$52.00</h2>
-        </div>
-        <div class="bottom_item">
-          <div class="bottom_img_cart">
-            <img src="img/3.png" alt="" class="bottom_img">
-            <div class="bottom_basket">
-              <img src="img/StrokeEffect.svg" alt="" class="bottom_basket_img">
-              <p class="bottom_basket_text"><a href="Cart.html">Add to Cart</a></p>
-            </div>
-          </div>
-
-          <h2 class="bottom_h2">ELLERY X M'O CAPSULE</h2>
-          <h3 class="bottom_h3">
-            Known for her sculptural takes on traditional tailoring,
-            Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-          </h3>
-          <h2 class="bottom_h2_price">$52.00</h2>
-        </div>
-        <div class="bottom_item">
-          <div class="bottom_img_cart">
-            <img src="img/4.png" alt="" class="bottom_img">
-            <div class="bottom_basket">
-              <img src="img/StrokeEffect.svg" alt="" class="bottom_basket_img">
-              <p class="bottom_basket_text"><a href="Cart.html">Add to Cart</a></p>
-            </div>
-          </div>
-
-          <h2 class="bottom_h2">ELLERY X M'O CAPSULE</h2>
-          <h3 class="bottom_h3">
-            Known for her sculptural takes on traditional tailoring,
-            Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-          </h3>
-          <h2 class="bottom_h2_price">$52.00</h2>
-        </div>
-        <div class="bottom_item">
-          <div class="bottom_img_cart">
-            <img src="img/5.png" alt="" class="bottom_img">
-            <div class="bottom_basket">
-              <img src="img/StrokeEffect.svg" alt="" class="bottom_basket_img">
-              <p class="bottom_basket_text"><a href="Cart.html">Add to Cart</a></p>
-            </div>
-          </div>
-
-          <h2 class="bottom_h2">ELLERY X M'O CAPSULE</h2>
-          <h3 class="bottom_h3">
-            Known for her sculptural takes on traditional tailoring,
-            Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-          </h3>
-          <h2 class="bottom_h2_price">$52.00</h2>
-        </div>
-        <div class="bottom_item">
-          <div class="bottom_img_cart">
-            <img src="img/6.png" alt="" class="bottom_img">
-            <div class="bottom_basket">
-              <img src="img/StrokeEffect.svg" alt="" class="bottom_basket_img">
-              <p class="bottom_basket_text"><a href="Cart.html">Add to Cart</a></p>
-            </div>
-          </div>
-
-          <h2 class="bottom_h2">ELLERY X M'O CAPSULE</h2>
-          <h3 class="bottom_h3">
-            Known for her sculptural takes on traditional tailoring,
-            Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-          </h3>
-          <h2 class="bottom_h2_price">$52.00</h2>
-        </div> -->
-      </div>
+      <div class="bottom center"></div>
       <div class="butt_bot">
         <a href="Catalog.html"><button class="butt_bot_bottom">Browse All Product</button></a>
       </div>
@@ -244,6 +148,12 @@
           </p>
         </div>
       </section>
+      <seiction class="cart_item">
+        <div class="cart_itemTitle center">Cart Items</div>
+        <div class="content-card"></div>
+
+
+      </seiction>
 
       <section class="subscribe">
         <div class="subscribe_item1">
